--- a/txt/sts14/sts14-ntnu.bib
+++ b/txt/sts14/sts14-ntnu.bib
@@ -221,3 +221,10 @@
   pages     = {32--43},
   url       = {http://www.aclweb.org/anthology/S13-1004}
 }
+
+@book{bird2009natural,
+  title={Natural language processing with {P}ython},
+  author={Bird, Steven and Klein, Ewan and Loper, Edward},
+  year={2009},
+  publisher={O'Reilly Media, Inc.}
+}
