--- a/txt/sts14/regression.tex
+++ b/txt/sts14/regression.tex
@@ -1,10 +1,16 @@
 
-\section{Similarity score regression}
+\subsection{Similarity score regression}
 \label{sec:regression}
 
-The final sentence pair similarity score is predicted by a Support Vector Machine (SVM) regression model using a Radial Basis (RBF) kernel \cite{VapnikEA:97}. The model is trained on the combined test data for the 2013 STS shared task and the trial and test data of the SemEval 2012 STS shared task. The combined dataset consists of ca. 7500 sentence pairs from nine different text categories. The regression model is trained as a bagged classifier, i.e., for each run 100 regression models are trained with 80\% of the training samples and features of the original training set drawn with replacement. The predictions of all these regression models are averaged into a final prediction. This bagged training procedure introduces additional regularization, that can reduce the instability of prediction accuracy between different test data categories. The prediction pipeline was implemented with the Scikit-learn software framework \cite{scikit-learn}.
+The final sentence pair similarity score is predicted by a Support Vector Regression (SVR) model with a Radial Basis (RBF) kernel \cite{VapnikEA:97}. The model is trained on the combined test data for the 2013 STS shared task and the trial and test data of the SemEval 2012 STS shared task. The combined dataset consists of about 7500 sentence pairs from nine different text categories. 
+The SVR model is trained as a bagged classifier, that is, for each run 100 regression models are trained with 80\% of the samples and features of the original training set drawn with replacement. The outputs of all models are averaged into a final prediction. 
+This bagged training procedure adds extra regularization that can reduce the instability of prediction accuracy between different test data categories. 
 
-The SVM regression models were trained with default parameters provided in the implementation, which are Cost penalty (C) 1.0, margin ($\epsilon$) 0.1 and RBF precision ($\gamma$) $1/|feature count|$. In preliminary experiments we were unable to improve the performance over these defaults by cross validation parameter search unless the models were trained for specific text categories. Consequently no parameter optimization was performed during training of the final systems.
+The prediction pipeline was implemented with the Scikit-learn software framework \cite{scikit-learn},
+and the SVR models were trained with the implementation's default parameters:
+cost penalty (C) 1.0, margin ($\epsilon$) 0.1 and RBF precision ($\gamma$) $1/|feature count|$. 
+We were unable to improve the performance over these defaults by cross validation parameter search 
+unless the models were trained for specific text categories. Consequently no parameter optimization was performed during training of the final systems.
 
 %%% Local Variables:  
 %%% mode: latex
